# PawFlow-Agents

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pawflow_exec_a8c14d89.py  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  POC_GUI_SUMMARY.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  _commit_msg.txt  cli.py  cli_commands.py  conftest.py  docker-compose.yml  file.txt  migrate_storage.py  pyproject.toml  requirements.txt  run_grok_tmp.py  run_parallel_agents.py
.antigravitycli/: 58fe6f73-d84d-483e-9214-9808f5289046.json
api/: __init__.py  app.py  auth.py
api_deprecated/: __init__.py  app.py  rate_limit.py
config/: __init__.py  agents.json  default_models.json  global_parameters.json  global_services.json  llm_profiles.json  prompts.json  relay_image_catalog.json  skills.json  task_defs.json  task_templates.json
core/: __init__.py  _agent_executor_base.py  _agent_executor_loop.py  _antigravity_base.py  _antigravity_input.py  _antigravity_manual.py  _bg_bucket_build.py  _cci_pool_spawn.py  _conversation_store_agentctx.py  _conversation_store_append.py  _conversation_store_base.py  _conversation_store_cache.py  _conversation_store_ctxio.py  _conversation_store_encryption.py  _conversation_store_git.py  _conversation_store_maint.py  _conversation_store_paths.py  _conversation_store_sessions.py  _conversation_store_transcript.py  _install_actions.py  _install_base.py  _install_credentials.py  _llm_client_driver.py  _llm_seq.py  _llm_types.py  _relay_naming.py  _repository_serde.py  _segmented_jsonl_io.py  _service_defs.py  _service_registry_io.py  _skill_marketplace_helpers.py  admin_scope.py  agent_diary.py  agent_executor.py  agent_hooks.py  agent_prompt_policy.py  agent_runtime_api.py  agent_runtime_ports.py  antigravity_observer_pool.py  api_client.py  (+148 more)
defaults/: skills.json
docker/: server-entrypoint.sh
docs/: 01_DOCUMENTATION_TECHNIQUE.md  02_REFERENCE_TASKS_SERVICES.md  ADMIN_CROSS_USER_SCOPES_PLAN.md  AGENT_SYSTEM.md  ANTIGRAVITY_OBSERVER.md  AWS_REMOTE_EXEC_PLAN.md  CLAUDE_CODE_INTERACTIVE.md  COGNITIVE_TOOLS.md  CUA_MODE_PLAN.md  EXPRESSION_LANGUAGE.md  FILE_SPLIT_800_PLAN.md  LEARNING_LOOP_PLAN.md  LEGAL_ASSISTANT_PLAN.md  PFP_DEVELOPER_GUIDE.md  PFP_PACKAGES.md  PFP_PUBLISHER_GUIDE.md  PINK_SKIN_BOT_PLAN.md  README.md  REALTIME_LIVEKIT_VALIDATION.md  REALTIME_MULTIMODAL_LIVEKIT_PLAN.md  REALTIME_VOICE_PLAN.md  RELAY_WORKSPACE_FS_PLAN.md  ROADMAP_GAPS.md  SLASH_COMMANDS.md  a2a_integration.md  architecture.md  deployment.md  desktop_vnc.md  development.md  docker.md  docker_image_distribution.md  filesystem.md  http_listener.md  installation_bootstrap.md  llm_aggregator.md  llm_providers.md  marketplace.md  media_tools.md  multi_client_conversations.md  pawcode.md  (+17 more)
engine/: __init__.py  _continuous_exec_control.py  _continuous_exec_run.py  _exec_types.py  _nifi_types.py  checkpoint.py  cluster.py  continuous_executor.py  cron_parser.py  data_preview.py  debugger.py  flow_diff.py  flow_state.py  flow_version.py  nifi_converter.py  nifi_script_converter.py  parser.py  provenance.py  remote_worker.py  scheduler.py  triggers.py  validator.py  worker_client.py  worker_protocol.py  worker_server.py
flows/: agent_example.json  demo_pipeline.json  discord_agent.json  example_pipeline.json  exemple_flux.json  http-hello-world.json  http_hello_world.json  pawflow_admin.json  pawflow_agent.json  slack_agent.json  sub_upper.json  telegram_agent.json  test-api-flow.json  whatsapp_agent.json
gui/: __init__.py  main.py  settings.py
gui_deprecated/: settings.py
pawflow-relay-desktop/: README.md  package-lock.json  package.json  start-windows.ps1
pawflow-relay-slint/: .gitignore  Cargo.toml  README.md
pawflow-relay-slint/scripts/: package-local.py  prepare-runtime.py
pawflow-relay-slint/src/: main.rs
pawflow-relay-slint/ui/: main.slint
pawflow-vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
pawflow-website/: WEBSITE_PLAN.md  docs.html  faq.html  howtos.html  index.html  quickstart.html  robots.txt  site.js  sitemap.xml  style.css
pawflow_cli/: README.md  __init__.py  __main__.py  _app_commands.py  _app_events.py  _app_messaging.py  api.py  app.py  auth.py  config.py  conversation_bootstrap.py  event_handler.py  relay.py  secure_store.py  stream_events.py  stream_json.py
pawflow_livekit_worker/: __init__.py  control_client.py  worker.py
pawflow_relay/: __init__.py  __main__.py  _relay_actions.py  _relay_children.py  _relay_codeserver.py  _relay_conn.py  _relay_desktop.py  _relay_dispatch.py  _relay_fs_setup.py  _relay_msg_loop.py  _relay_session.py  _relay_state.py  _relay_terminal.py  _relay_ws_proto.py  _thread_base.py  _thread_docker.py  _thread_host.py  auth.py  cli.py  key_ops.py  manager.py  manager_cli.py  proc_registry.py  register.py  remote_mounts.py  server_fs_client.py  server_fs_mount.py  thread.py  utils.py  worker.py  ws_frame.py
scripts/: backfill_msg_ids.py  build-pawcode-installer.py  build-pawflow-docker.sh  build-pawflow-install-zip.sh  build-relay-cli-installer.py  build-server-minimal-relay.sh  doctor-pawflow.ps1  doctor-pawflow.sh  extract_wavespeed_catalog.py  generate-relay-image.py  ingest_pixazo_catalog.py  install-pawflow.ps1  install-pawflow.sh  memory_gc.py  migrate_conv_agents_definition.py  migrate_md_memories.py  migrate_msg_seq_ts.py  migrate_segmented_jsonl.py  migrate_split_assistant_blocks.py  migrate_transcript_context_format.py  package-relay-slint.py  pawcode-bin-entry.py  repair_contexts.py  run-pawflow-docker.sh  test_apparmor_profile.sh  test_apparmor_relay_profile.sh
services/: __init__.py  _filesystem_ops.py  _http_base.py  _http_request.py  _http_server.py  _livekit_engine.py  _livekit_sessions.py  _pixazo_base.py  _pixazo_helpers.py  _pixazo_transport.py  _realtime_adapters.py  _realtime_bridge.py  _realtime_gemini.py  _realtime_tools.py  _realtime_turn.py  _realtime_worker_protocol.py  _relay_conn.py  _relay_ws.py  _telegram_send.py  _tool_relay_base.py  _tool_relay_cache_req.py  (+90 more)
(+1147 files in other folders)
