[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawflow"
version = "1.0.0a58"
description = "Self-hosted AI agent orchestration platform — Apache NiFi meets Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PawFlow Contributors"},
]
keywords = ["ai", "agents", "orchestration", "nifi", "llm", "claude-code", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "defusedxml>=0.7.1",
    # Database
    "sqlalchemy>=2.0.0",
    # HTTP
    "requests>=2.31.0",
    "httpx>=0.25.0",
    # Authentication
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    # Git integration
    "GitPython>=3.1.0",
    # Token counting
    "tiktoken>=0.5.0",
    # Document conversion (attachments)
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "striprtf>=0.0.26",
    "PyPDF2>=3.0.0",
    "ebooklib>=0.18",
    # Utilities
    "python-dateutil>=2.8.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "diff-match-patch>=20230501",
    # Local TTS
    "supertonic[serve]>=0.1.0",
    # Code structure graph
    "networkx>=3.0",
    # Web scraping
    "beautifulsoup4>=4.12.0",
    "playwright>=1.50.0",
    "patchright>=1.50.0",
    "scrapling[all]>=0.4.0",
    # Embeddings (semantic memory)
    "sentence-transformers>=2.2.0",
    # Tree-sitter (code graph)
    "tree-sitter>=0.23.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    # Connectors
    "paramiko>=3.3.0",
    "boto3>=1.34.0",
    "kafka-python>=2.0.0",
    "paho-mqtt>=1.6.0",
    "fastavro>=1.8.0",
    "pyarrow>=13.0.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.17.0",
    "psycopg2-binary>=2.9.0",
    # JSON repair
    "json-repair>=0.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
sdk = [
    "httpx>=0.25.0",
]

[project.scripts]
pawflow = "cli:main"
pawflow-relay = "pawflow_relay.manager_cli:main"
pawcode = "pawflow_cli.app:main"

[project.urls]
Homepage = "https://github.com/allcolor/PawFlow-Agents"
Documentation = "https://github.com/allcolor/PawFlow-Agents/tree/main/docs"
Repository = "https://github.com/allcolor/PawFlow-Agents"
Issues = "https://github.com/allcolor/PawFlow-Agents/issues"

[tool.setuptools]
py-modules = ["cli", "cli_commands"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# .pylib holds vendored/pinned deps installed into the repo itself
# (fastavro, pyarrow, tiktoken, regex, requests, certifi...) so they
# survive Docker relay restarts without re-running pip. Must be on
# sys.path for both pytest and the running app -- root conftest.py
# handles the latter; this entry handles pytest collection.
pythonpath = [".", ".pylib"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = [
    "core*", "engine*", "tasks*", "services*", "tools*",
    "pawflow_relay*", "pawflow_cli*",
]
exclude = ["tests*"]

[tool.setuptools.package-data]
"tasks.io.chat_ui" = ["**/*.html", "**/*.js", "**/*.css", "**/*.json"]
