[package]
name = "pawflow-relay-slint"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde_json = "1"
slint = "1.16"
tray-icon = { version = "0.23.1", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
slint-build = "1.16"
